--- a/index.html
+++ b/index.html
@@ -45,20 +45,15 @@
                 <div>
                     <div class="promo__interactive-title">ПРОСМОТРЕННЫЕ ФИЛЬМЫ</div>
                     <ul class="promo__interactive-list">
-                        <li class="promo__interactive-item">ЛОГАН
-                            <div class="delete"></div>
+                        <li class="promo__interactive-item">ЛОГАН<div class="delete"></div>
                         </li>
-                        <li class="promo__interactive-item">ЛИГА СПРАВЕДЛИВОСТИ
-                            <div class="delete"></div>
+                        <li class="promo__interactive-item">ЛИГА СПРАВЕДЛИВОСТИ<div class="delete"></div>
                         </li>
-                        <li class="promo__interactive-item">ЛА-ЛА ЛЭНД
-                            <div class="delete"></div>
+                        <li class="promo__interactive-item">ЛА-ЛА ЛЭНД<div class="delete"></div>
                         </li>
-                        <li class="promo__interactive-item">ОДЕРЖИМОСТЬ
-                            <div class="delete"></div>
+                        <li class="promo__interactive-item">ОДЕРЖИМОСТЬ<div class="delete"></div>
                         </li>
-                        <li class="promo__interactive-item">СКОТТ ПИЛИГРИМ ПРОТИВ...
-                            <div class="delete"></div>
+                        <li class="promo__interactive-item">СКОТТ ПИЛИГРИМ ПРОТИВ... <div class="delete"></div>
                         </li>
                     </ul>
                 </div>
@@ -70,7 +65,7 @@
                         <span>Сделать его любимым?</span>
                         <input type="checkbox">
                         <span class="yes">Да!</span>
-                        <button>Подтвердить</button>
+                        <button >Подтвердить</button>
                     </form>
                 </div>
             </div>
